crates/crochet_parser/src/snapshots/crochet_parser__type_ann__tests__type_annotations-5.snap
---
source: crates/crochet_parser/src/type_ann.rs
expression: "parse_type(\"((A, B) => C) | D\")"
---
Union(
    UnionType {
        span: 0..17,
        types: [
            Lam(
                LamType {
                    span: 1..12,
                    params: [
                        TypeRef(
                            TypeRef {
                                span: 2..3,
                                name: "A",
                                type_params: None,
                            },
                        ),
                        TypeRef(
                            TypeRef {
                                span: 5..6,
                                name: "B",
                                type_params: None,
                            },
                        ),
                    ],
                    ret: TypeRef(
                        TypeRef {
                            span: 11..12,
                            name: "C",
                            type_params: None,
                        },
                    ),
                    type_params: None,
                },
            ),
            TypeRef(
                TypeRef {
                    span: 16..17,
                    name: "D",
                    type_params: None,
                },
            ),
        ],
    },
)
